Fix logo in dark mode

--- a/assets/css/extended/custom_.css
+++ b/assets/css/extended/custom_.css
@@ -57,7 +57,7 @@ body.dark .logo>a>svg>g>path {
 }
 
 .dark .header .logo>a>svg {
-    vertical-align: -32%;
+    vertical-align: -31%;
 }
 
 .dark .logo .logo-switches svg {
